--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@bakunya/react-masonry": "^0.0.5",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.11.11",
+        "@mui/lab": "^5.0.0-alpha.124",
         "@mui/material": "^5.11.4",
         "@mui/styled-engine": "^5.11.0",
         "@testing-library/jest-dom": "^5.14.1",
@@ -13,16 +15,19 @@
         "@testing-library/user-event": "^13.2.1",
         "moment": "^2.29.4",
         "react": "^18.2.0",
+        "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^18.2.0",
+        "react-masonry-css": "^1.0.16",
+        "react-responsive-masonry": "^2.1.7",
         "react-reveal": "^1.2.2",
         "react-scripts": "5.0.1",
         "uuid": "^9.0.0",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
-        "s": "react-scripts start",
-        "b": "react-scripts build",
-        "d": "firebase deploy"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "deploy": "firebase deploy"
     },
     "eslintConfig": {
         "extends": [
@@ -30,16 +35,9 @@
             "react-app/jest"
         ]
     },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+    ]
 }
